feat: ffmpegの出力形式を日付ベースのディレクトリ構造に変更
連番ファイルから年/月/日/時分秒.mp4の階層構造に変更
10年分のディレクトリを事前作成する機能を追加
SEGMENT_TIME、SEGMENT_WRAP環境変数をDockerfile・READMEから削除

--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -20,8 +20,6 @@ ADD ./ffmpeg.sh /ffmpeg.sh
 
 WORKDIR /videos
 
-ENV RTSP_URL=rtsp://example.com/live \
-    SEGMENT_TIME=60 \
-    SEGMENT_WRAP=10
+ENV RTSP_URL=rtsp://example.com/live
 
 CMD ["/bin/sh", "/ffmpeg.sh"]
