--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -20,6 +20,7 @@ ADD ./ffmpeg.sh /ffmpeg.sh
 
 WORKDIR /videos
 
-ENV RTSP_URL=rtsp://example.com/live
+ENV RTSP_URL=rtsp://example.com/live \
+    SEGMENT_TIME=60
 
 CMD ["/bin/sh", "/ffmpeg.sh"]
