feat: リリースノートにDocker Hubリンクを追加とバージョンアップ
GitHub ActionsワークフローでDocker Hubイメージへのリンクを追加
バージョンをv1.0.0からv1.0.1に更新

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -69,4 +69,4 @@ jobs:
           body: |
             VERSION: ${{ steps.vars.outputs.version }}
             Docker image:
-              ${{ steps.repo.outputs.image }}:${{ steps.vars.outputs.version }}
+              [${{ steps.repo.outputs.image }}:${{ steps.vars.outputs.version }}](https://hub.docker.com/r/${{ steps.repo.outputs.image }})
