fix: Docker設定とディレクトリ作成処理を改善
coreutilsパッケージ追加とffmpeg.shの実行権限設定
ディレクトリ作成期間を10年から2年に短縮して処理を軽量化
より汎用的なdate計算でクロスプラットフォーム対応を向上
バージョンをv1.0.2に更新

--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -14,9 +14,11 @@ COPY --from=builder /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
 COPY --from=builder /etc/timezone /etc/timezone
 
 RUN apk add --no-cache \
+    coreutils \
     ffmpeg
 
 ADD ./ffmpeg.sh /ffmpeg.sh
+RUN chmod +x /ffmpeg.sh
 
 WORKDIR /videos
 
